# ocviapy

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
ocviapy/: __init__.py
