[metadata]
name = ocviapy
author = Brandon Squizzato
author_email = bsquizza@redhat.com
description = Wraps OpenShift shell utility (oc)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://www.github.com/bsquizz/ocviapy
keywords =
    openshift
    kubernetes
    oc
classifiers =
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    anytree
    kubernetes
    pyyaml
    sh>=1.13.1
    wait_for
setup_requires = setuptools_scm
python_requires = >=3.6
include_package_data = True
packages = find:

[options.extras_require]
test =
    flake8
    pytest
    pytest-mock

[flake8]
max-line-length = 100
